instructions.InstructionsDrawG.scala.code
brusdown()
left()
forward()
forward()
forward()
forward()
right()
backward()
backward()
backward()
backward()
right()
forward()
forward()
forward()
forward()
left()
forward()
forward()
left()
forward()
brushUp()
backward()
right()
forward()
forward()